So I can remove material design

--- a/templates/layouts/base_background.html
+++ b/templates/layouts/base_background.html
@@ -1,15 +1,4 @@
-<!--
-=========================================================
-* Material Kit 2 - v3.0.4
-=========================================================
 
-* Product Page:  https://www.creative-tim.com/product/material-kit
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-* Coded by www.creative-tim.com
-
- =========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
 {% load static %}
 {% load compress %}
 <!DOCTYPE html>
@@ -50,6 +39,7 @@
             <div class="col-lg-7 text-center mx-auto">
               <h1 class="text-white pt-3 mt-n5">The Crypt!</h1>
               <p class="lead text-white mt-3">Vem är det som går där i mörkret?</p>
+              <a href="{% url 'index' %}">Mysterium</a>
             </div>
           </div>
         </div>
