--- a/chat/templates/room.html
+++ b/chat/templates/room.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>django-channels-chat</title>
+        <title>Chat: {{ room.name }}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <style>
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="container mt-3 p-5">
-            <h2>django-channels-chat</h2>
+            <h2>Chat: {{ room.name }}</h2>
             <div class="row">
                 <div class="col-12 col-md-8">
                     <div class="mb-2">
