--- a/game/templates/join.html
+++ b/game/templates/join.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base_background.html' %}
 
-{% block title %} The Crypt - login {% endblock title %}
+{% block title %} The Crypt - join {% endblock title %}
 {% block body %} class="sign-in-basic" {% endblock body %}
 
 {% block header %}
@@ -19,7 +19,7 @@
           <div class="card z-index-0 fadeIn3 fadeInBottom">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign in</h4>
+                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Join {{game.name}}</h4>
               </div>
             </div>
             <div class="card-body">
@@ -32,24 +32,16 @@
                 {% csrf_token %}
                 {% for field in form %}
                   <div class="input-group input-group-outline my-3">
-                    <label class="form-label">fff{{ field.label }}</label>
+                    <label class="form-label">{{ field.label }}</label>
                     {{field}}
                   </div>
                   <small>{{ field.errors }}</small>
                 {% endfor %}
-                <div class="form-check form-switch d-flex align-items-center mb-3">
-                  <input class="form-check-input" type="checkbox" id="rememberMe" checked>
-                  <label class="form-check-label mb-0 ms-3" for="rememberMe">Remember me</label>
-                </div>
-                <a href="{% url 'password_reset' %}" class="mt-4 text-sm">
-                  Forgot Password?
-                </a>
+
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Join</button>
                 </div>
-                <p class="mt-4 text-sm text-center">
-                  Don't have an account? <a href="{% url 'register' %}" class="text-primary">Sign UP</a>
-                </p>
+
               </form>
             </div>
           </div>
