--- a/templates/includes/navigation_light.html
+++ b/templates/includes/navigation_light.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
   <div class="container">
     <a class="navbar-brand" href="/" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
-      Material Kit 2
+      The Crypt
     </a>
     <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon mt-2">
@@ -36,7 +36,7 @@
                           </a>
 
                           {% if app.models %}
-                            <div class="collapse" id="collapse-{{app.app_label}}">                                                                                                   
+                            <div class="collapse" id="collapse-{{app.app_label}}">
                               <ul class="flex-column nav">
                                 {% for model in app.models %}
                                   {% if model.url %}
