Game work up until the chats!

--- a/chat/templates/room.html
+++ b/chat/templates/room.html
@@ -34,6 +34,7 @@
                         </div>
                     </div>
                 </div>
+            {% if room.name !=  'Anonym' %}
                 <div class="col-12 col-md-4">
                     <label for="onlineUsers">Online users</label>
                     <select multiple class="form-control" id="onlineUsersSelector">
