--- a/game/templates/join.html
+++ b/game/templates/join.html
@@ -1,58 +1,42 @@
-{% extends 'layouts/base_background.html' %}
+{% extends 'base.html' %}
+{% load bootstrap5 %}
+{% load static %}
+{% load i18n %}
+{% block title %}The Crypt - Delta i {{game.name}}{% endblock %}
 
-{% block title %} The Crypt - join {% endblock title %}
-{% block body %} class="sign-in-basic" {% endblock body %}
-
-{% block header %}
-
-{% include 'includes/navigation_transparent.html' %}
-
-{% endblock header %}
-
-{% block content %}
-
-  <div class="page-header align-items-start min-vh-100" style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');" loading="lazy">
-    <span class="mask bg-gradient-dark opacity-6"></span>
-    <div class="container my-auto">
-      <div class="row">
-        <div class="col-lg-4 col-md-8 col-12 mx-auto">
-          <div class="card z-index-0 fadeIn3 fadeInBottom">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Join {{game.name}}</h4>
-              </div>
-            </div>
-            <div class="card-body">
-              <form role="form" method="post" action="#" class="text-start">
-                {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <small>{{ error }}</small>
-                  {% endfor %}
-                {% endif %}
-                {% csrf_token %}
-                {% for field in form %}
-                  <div class="input-group input-group-outline my-3">
-                    <label class="form-label">{{ field.label }}</label>
-                    {{field}}
-                  </div>
-                  <small>{{ field.errors }}</small>
-                {% endfor %}
-
-                <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Join</button>
-                </div>
-
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
+{% block body %}
+<!-- Header - set the background image for the header in the line below-->
+<header class="py-5 bg-image-full"
+    style="background-image: url('{% static 'img/neon-tropical-monstera-leaf-banner.jpg' %}')">
+    <div class="text-center my-5">
+        <img class="img-fluid rounded-circle mb-4" src="{% static 'img/logga.png' %}" alt="Slottsmysterier" />
+        <h1 class="text-white fs-3 fw-bolder">The Crypt</h1>
     </div>
-  </div>
-  {% endblock content %}
+</header>
+<!-- Content section-->
+<section class="py-5">
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <h2>Delta i mysterium: {{game.name}}</h2>
+                <form role="form" method="post" action="#" enctype="multipart/form-data">
+                  {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                    <small>{{ error }}</small>
+                    {% endfor %}
+                  {% endif %}
+                  {% csrf_token %}
+                  {% bootstrap_form form %}
 
-  {% block footer %}
+                  <div class="text-center">
+                    {% bootstrap_button "Delta" button_type="submit" %}
+                  </div>
 
-  {% include 'includes/footer_signin.html' %}
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock body %}
 
-  {% endblock footer %}
+
