--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -1,57 +1,28 @@
-{% extends 'layouts/base_background.html' %}
+{% extends 'base.html' %}
+{% load bootstrap5 %}
+{% load static %}
+{% load i18n %}
+{% block title %}The Crypt - {{ game.name }}{% endblock %}
 
-{% block title %} The Crypt! - {{ game.name }}  {% endblock title %}
-{% block body %} class="sign-in-basic" {% endblock body %}
-
-{% block header %}
-
-{% include 'includes/navigation_transparent.html' %}
-
-{% endblock header %}
-
-{% block content %}
-
-  <div class="page-header align-items-start min-vh-100" style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');" loading="lazy">
-    <span class="mask bg-gradient-dark opacity-6"></span>
-    <div class="container my-auto">
-      <div class="row">
-        <div class="col-lg-4 col-md-8 col-12 mx-auto">
-          <div class="card z-index-0 fadeIn3 fadeInBottom">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">{{game.name}}</h4>
-                <div class="row mt-3">
-                  <div class="col-2 text-center ms-auto">
-                    <a class="btn btn-link px-3" href="javascript:;">
-                      <i class="fa fa-facebook text-white text-lg"></i>
-                    </a>
-                  </div>
-                  <div class="col-2 text-center px-1">
-                    <a class="btn btn-link px-3" href="javascript:;">
-                      <i class="fa fa-github text-white text-lg"></i>
-                    </a>
-                  </div>
-                  <div class="col-2 text-center me-auto">
-                    <a class="btn btn-link px-3" href="javascript:;">
-                      <i class="fa fa-google text-white text-lg"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card-body">
-              <a href="{% url 'chat-index' game.id %}" class="text-primary">Chat</a>
-
-            </div>
-          </div>
-        </div>
-      </div>
+{% block body %}
+<!-- Header - set the background image for the header in the line below-->
+<header class="py-5 bg-image-full"
+    style="background-image: url('{% static 'img/neon-tropical-monstera-leaf-banner.jpg' %}')">
+    <div class="text-center my-5">
+        <img class="img-fluid rounded-circle mb-4" src="{% static 'img/logga.png' %}" alt="Slottsmysterier" />
+        <h1 class="text-white fs-3 fw-bolder">The Crypt - {{ game.name }}</h1>
     </div>
-  </div>
-  {% endblock content %}
+</header>
+<!-- Content section-->
+<section class="py-5">
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
 
-  {% block footer %}
-
-  {% include 'includes/footer_signin.html' %}
-
-  {% endblock footer %}
+                <h2>Mysterium: {{ game.name }}</h2>
+                <a href="{% url 'chat-index' game.id %}" class="btn btn-primary">Chat</a>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock body %}
