--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,29 +1,54 @@
-{% extends 'layouts/base_background.html' %}
+{% extends 'base.html' %}
+{% load bootstrap5 %}
 {% load static %}
+{% load i18n %}
+{% block title %}The Crypt{% endblock %}
 
-{% block title %} The Crypt {% endblock title %}
+{% block body %}
 
-{% block body %} class="index-page bg-gray-200" {% endblock body %}
+        <!-- Header - set the background image for the header in the line below-->
+        <header class="py-5 bg-image-full"
+            style="background-image: url('{% static 'img/neon-tropical-monstera-leaf-banner.jpg' %}')">
+            <div class="text-center my-5">
+                <img class="img-fluid rounded-circle mb-4" src="{% static 'img/logga.png' %}" alt="Slottsmysterier" />
+                <h1 class="text-white fs-3 fw-bolder">The Crypt</h1>
+            </div>
+        </header>
+        <!-- Content section-->
+        <section class="py-5">
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h2>Mysterium</h2>
+                        <p class="lead">
+                        {% if user.is_authenticated %}
+                        <a class="btn btn-light mr-2" href="{% url 'game_list' %}">{% trans "Gå till mysteriumen" %}</a>
+                        {% else %}
+                        <a class="btn btn-light mr-2" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
+                        <a class="btn btn-dark" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
+                        {% endif %}
+                        </p>
 
-{% block content %}
-
-Hallo
-
-{% endblock content %}
-
-{% block javascripts %}
-
-<!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-<script src="{% static 'js/plugins/countup.min.js' %}"></script>
-<script src="{% static 'js/plugins/choices.min.js' %}"></script>
-<script src="{% static 'js/plugins/prism.min.js' %}"></script>
-<script src="{% static 'js/plugins/highlight.min.js' %}"></script>
-<!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-<script src="{% static 'js/plugins/rellax.min.js' %}"></script>
-<!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-<script src="{% static 'js/plugins/tilt.min.js' %}"></script>
-<!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-<script src="{% static 'js/plugins/choices.min.js' %}"></script>
-
-
-{% endblock javascripts %}
+                    </div>
+                </div>
+            </div>
+        </section>
+<!--
+    <!-- Image element - set the background image for the header in the line below-->
+        <div class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/4ulffa6qoKA/1200x800')">
+            <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
+            <div style="height: 20rem"></div>
+        </div>
+        <!-- Content section-->
+        <section class="py-5">
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h2>Engaging Background Images</h2>
+                        <p class="lead">The background images used in this template are sourced from Unsplash and are open source and free to use.</p>
+                        <p class="mb-0">I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course.</p>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+{% endblock %}
