--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -20,7 +20,7 @@
             <div class="col-lg-6">
 
                 <h2>Mysterium: {{ game.name }}</h2>
-                <a href="{% url 'chat-index' game.id %}" class="btn btn-primary">Chat</a>
+                <a href="{% url 'chat_index' game.id %}" class="btn btn-primary">Chat</a>
             </div>
         </div>
     </div>
