--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -1,3 +1,6 @@
 {% extends 'bootstrap5/bootstrap5.html' %}
 
 {% block bootstrap5_title %}{% block title %}{% endblock %}{% endblock %}
+{% block bootstrap5_extra_head %}
+	<!-- <link href="/css/styles.css" rel="stylesheet" /> -->
+{% endblock %}
