--- a/chat/templates/chats.html
+++ b/chat/templates/chats.html
@@ -1,32 +1,31 @@
+{% extends 'base.html' %}
+{% load bootstrap5 %}
 {% load static %}
+{% load i18n %}
+{% block title %}The Crypt - Chats{% endblock %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>django-channels-chat</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-        <style>
-            #roomSelect {
-                height: 300px;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-3 p-5">
-            <h2>The Game rooms for you</h2>
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <label for="roomSelect">Active rooms</label>
-                    <input type="hidden" id="game_id" value="{{game_id}}">
-                    <select multiple class="form-control" id="roomSelect">
-                        {% for room in rooms %}
-                            <option>{{ room }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+{% block body %}
+<!-- Header - set the background image for the header in the line below-->
+<header class="py-5 bg-image-full"
+    style="background-image: url('{% static 'img/neon-tropical-monstera-leaf-banner.jpg' %}')">
+    <div class="text-center my-5">
+        <img class="img-fluid rounded-circle mb-4" src="{% static 'img/logga.png' %}" alt="Slottsmysterier" />
+        <h1 class="text-white fs-3 fw-bolder">The Crypt</h1>
+    </div>
+</header>
+<!-- Content section-->
+<section class="py-5">
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <h2>Vilken chat vill du gå till</h2>
+                    {% for room in rooms %}
+                        <a href="{% url 'chat_room' game_id room %}" class="btn btn-primary">{{room}}</a>
+                    {% endfor %}
             </div>
         </div>
-        <script src="{% static 'chats.js' %}"></script>
-    </body>
-</html>
+    </div>
+</section>
+{% endblock body %}
+
+
