--- a/chat/templates/room.html
+++ b/chat/templates/room.html
@@ -1,48 +1,44 @@
+{% extends 'base.html' %}
+{% load bootstrap5 %}
 {% load static %}
+{% load i18n %}
+{% block title %}The Crypt - Chat{% endblock %}
+{% block bootstrap5_extra_head %}
+<style type="text/css">
+    textarea{
+      overflow: scroll;
+    }
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Chat: {{ room.name }}</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-        <style>
-            #chatLog {
-                height: 300px;
-                background-color: #FFFFFF;
-                resize: none;
-            }
+    .min-vh-88 {
+        min-height: 88vh!important;
+    }
+</style>
 
-            #onlineUsersSelector {
-                height: 300px;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-3 p-5">
-            <h2>Chat: {{ room.name }}</h2>
-            <div class="row">
-                <div class="col-12 col-md-8">
-                    <div class="mb-2">
-                        <label for="chatLog">Room: #{{ room.name }}</label>
-                        <textarea class="form-control" id="chatLog" readonly></textarea>
-                    </div>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="chatMessageInput" placeholder="Enter your chat message">
-                        <div class="input-group-append">
-                            <button class="btn btn-success" id="chatMessageSend" type="button">Send</button>
-                        </div>
-                    </div>
-                </div>
-            {% if room.name !=  'Anonym' %}
-                <div class="col-12 col-md-4">
-                    <label for="onlineUsers">Online users</label>
-                    <select multiple class="form-control" id="onlineUsersSelector">
-                    </select>
-                </div>
-            </div>
-            {{ room.name|json_script:"roomName" }}
+{% endblock %}
+{% block body %}
+<!-- Content section-->
+
+<!-- Header - set the background image for the header in the line below-->
+<header class="pt-5 bg-image-full"
+    style="background-image: url('{% static 'img/neon-tropical-monstera-leaf-banner.jpg' %}')">
+    <div class="text-left my-3 ">
+        <h5 class="text-white mx-3 ">I rum: {{ room.name }}</h5>
+    </div>
+</header>
+<div class="container-fluid">
+    <div class="min-vh-88 mb-5 form-group flex-grow-1 d-flex flex-column">
+        <textarea class="border border-info form-control flex-grow-1 pb-5" rows="10" id="chatLog" readonly></textarea>
+    </div>
+</div>
+<div class="container-fluid fixed-bottom">
+     <div class="col input-group">
+        <input type="text" class="form-control" id="chatMessageInput" placeholder="Enter your chat message">
+        <div class="input-group-append">
+            <button class="btn btn-success" id="chatMessageSend" type="button">Send</button>
         </div>
-        <script src="{% static 'room.js' %}"></script>
-    </body>
-</html>
+    </div>
+</div>
+{{ room.name|json_script:"roomName" }}
+{{ game.id|json_script:"gameId" }}
+<script src="{% static 'room.js' %}"></script>
+{% endblock body %}
