--- a/game/templates/join.html
+++ b/game/templates/join.html
@@ -19,7 +19,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <h2>Delta i mysterium: {{game.name}}</h2>
-                <form role="form" method="post" action="#" enctype="multipart/form-data">
+                <form method="post" enctype="multipart/form-data">
                   {% if form.non_field_errors %}
                     {% for error in form.non_field_errors %}
                     <small>{{ error }}</small>
